fix failed deployment

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,5 @@
-#spring.data.mongodb.host=
-#spring.data.mongodb.port=${PROD_DB_PORT}
-#spring.data.mongodb.username=${PROD_DB_USERNAME}
-#spring.data.mongodb.password=${PROD_DB_PASSWORD}
+spring.data.mongodb.uri=mongodb://mongo:E3HhCNhsafYd14LPCOPf@containers-us-west-132.railway.app:7166
 spring.data.mongodb.database=epic
-spring.data.mongodb.uri=${PROD_DB_URI}
 
 
 admin.user.email=ligaliomotolani@gmail.com
